--- a/styles.css
+++ b/styles.css
@@ -27,16 +27,19 @@ header {
   display: flex;
   gap: 50px;
   padding: 20px;
+  border-bottom: 2px solid var(--tertiary-color);
 }
 
 .logo {
-  max-width: 150px;
+  width: 200px;
+  height: auto;
 }
 
 input {
   border: none;
   border-radius: 25px;
   width: 70%;
+  height: 45px;
   background-color: var(--tertiary-color);
   text-align: center;
   font-size: var(--card-title);
@@ -44,16 +47,39 @@ input {
 /* Seccion principal */
 main {
   grid-area: main;
-  background-color: var(--tertiary-color);
   display: grid;
   grid-template-areas: 'article section';
   grid-template-columns: 1fr 3fr;
+  gap: 20px;
+  margin: 50px;
 }
 
 article {
   grid-area: article;
-  background-color: lightcoral;
   border-radius: 10px;
+  text-align: center;
+  justify-items: center;
+}
+
+.playerButton,
+.timeButton {
+  display: block;
+  margin: 10px;
+  height: 40px;
+  width: 200px;
+  background-color: var(--tertiary-color);
+  border: none;
+  border-radius: 25px;
+  box-shadow: 2px 2px 5px;
+  color: var(--secondary-color);
+  font-size: 16px;
+  padding: 10px 20px;
+}
+
+.playerButton:hover,
+.timeButton:hover {
+  transform: scale(1.1);
+  transition: 0.3s;
 }
 
 .container {
@@ -62,6 +88,7 @@ article {
   flex-direction: column;
   align-items: center;
   border-radius: 10px;
+  background-color: var(--tertiary-color);
 }
 h2 {
   font-weight: 800;
@@ -115,7 +142,7 @@ h3 {
   font-size: var(--price-text);
 }
 
-button {
+.cardButton {
   background-color: var(--quaternary-color);
   border: none;
   border-radius: 8px;
@@ -125,12 +152,12 @@ button {
   padding: 10px 20px;
   font-weight: bold;
 }
-button:hover {
+.cardButton:hover {
   background-color: #006bb4;
 }
 footer {
   grid-area: footer;
-  border-top: 1px solid var(--tertiary-color);
+  border-top: 2px solid var(--tertiary-color);
   padding: 20px;
   margin-top: 20px;
 }
