--- a/styles.css
+++ b/styles.css
@@ -23,22 +23,25 @@ body {
 }
 header {
   grid-area: header;
-
   display: flex;
-  gap: 50px;
+  gap: 30px;
   padding: 20px;
   border-bottom: 2px solid var(--tertiary-color);
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 50px;
 }
 
 .logo {
-  width: 200px;
-  height: auto;
+  width: auto;
+  height: 45px;
+  margin: 0 auto;
 }
 
 input {
   border: none;
   border-radius: 25px;
-  width: 70%;
+  width: 74%;
   height: 45px;
   background-color: var(--tertiary-color);
   text-align: center;
@@ -127,7 +130,6 @@ img {
   width: 90%;
   height: 55%;
   object-fit: cover;
-  padding-top: 8px;
 }
 
 h3 {
