--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,10 @@ article {
   border-radius: 10px;
   background-color: var(--tertiary-color);
 }
+
+.container ul {
+  padding: 20px;
+}
 h2 {
   font-weight: 800;
   font-size: var(--title-text);
